71.1. Created toggleAdditionalInfoVisibilityHelp function to prevent code duplication when passing toggleAdditionalInfoVisibility prop to ShowInfoBtn

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   width: 100%;
   height: 60px;
-  z-index: 100;
+  z-index: 40;
 
   &__inner {
     height: 100%;
