--- a/src/components/common/AreYouSurePopup/AreYouSurePopup.module.scss
+++ b/src/components/common/AreYouSurePopup/AreYouSurePopup.module.scss
@@ -7,7 +7,7 @@
   background-color: rgba($color: black, $alpha: 0.8);
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
 
   &__body {
     min-height: 100%;
